NDEX-898: added v3 user folder tools